--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bedit",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "better edit than immer",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
