--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "better edit than immer",
   "main": "index.ts",
   "scripts": {
-    "test": "vitest",
-    "test:run": "vitest run",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -29,6 +29,7 @@
     "immer": "^10.0.3",
     "mutative": "^1.0.0",
     "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
     "vitest": "^1.6.1"
   }
 }
