Add Zustand integration to README and update package.json for symbols

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "./zustand": {
       "production": "./dist/zustand.mjs",
       "default": "./dist/zustand.mjs"
+    },
+    "./symbols": {
+      "production": "./dist/symbols.mjs",
+      "default": "./dist/symbols.mjs"
     }
   },
   "scripts": {
