--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bedit",
   "version": "0.0.9",
-  "description": "like immer but weird (and cool)",
+  "description": "like immer but weird (and kinda cool)",
   "main": "dist/bedit.mjs",
   "files": [
     "dist",
