--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "bedit",
   "version": "0.0.9",
-  "description": "like immer but weird (and cool)",
+  "description": "like immer but weird (and kinda cool)",
   "main": "dist/bedit.mjs",
   "files": [
     "dist",
-    "bedit.mts",
-    "bedit.production.mts"
+    "src"
   ],
   "type": "module",
   "exports": {
     ".": {
       "production": "./dist/bedit.production.mjs",
       "default": "./dist/bedit.mjs"
+    },
+    "./zustand": {
+      "production": "./dist/zustand.mjs",
+      "default": "./dist/zustand.mjs"
+    },
+    "./symbols": {
+      "production": "./dist/symbols.mjs",
+      "default": "./dist/symbols.mjs"
     }
   },
   "scripts": {
@@ -43,14 +50,19 @@
   },
   "homepage": "https://github.com/ds300/bedit#readme",
   "devDependencies": {
+    "@fast-check/vitest": "^0.2.2",
     "@types/node": "^24.1.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "esbuild": "^0.25.8",
+    "fast-check": "^4.2.0",
     "immer": "^10.0.3",
     "mutative": "^1.0.0",
     "preprocess": "^3.2.0",
     "prettier": "^3.6.2",
+    "react": "^19.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
-    "vitest": "^1.6.1"
+    "vitest": "^1.6.1",
+    "zustand": "^5.0.7"
   }
 }
