--- a/package.json
+++ b/package.json
@@ -51,15 +51,22 @@
   "homepage": "https://github.com/ds300/bedit#readme",
   "devDependencies": {
     "@fast-check/vitest": "^0.2.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.1.0",
+    "@types/react": "^19.1.10",
+    "@types/react-test-renderer": "^19.1.0",
     "@vitest/coverage-v8": "^1.6.1",
     "esbuild": "^0.25.8",
     "fast-check": "^4.2.0",
     "immer": "^10.0.3",
+    "jsdom": "^26.1.0",
     "mutative": "^1.0.0",
     "preprocess": "^3.2.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
+    "react-test-renderer": "^19.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vitest": "^1.6.1",
