--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "allowJs": true,
     "checkJs": false,
     "declaration": true,
+    "noUnusedLocals": true,
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
